fix: visually rearrange alignments in refinement lists (#44)

--- a/src/App.scss
+++ b/src/App.scss
@@ -383,7 +383,7 @@
 
 .uni-RefinementList-ListContainer {
   max-height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 /* Hits */
