--- a/src/components/ColorList.scss
+++ b/src/components/ColorList.scss
@@ -9,4 +9,10 @@
       box-shadow: inset 0 0 0 1px #fff;
     }
   }
+  .ais-RefinementList-labelText {
+    margin-top: 3px;
+  }
+  .ais-RefinementList-count {
+    margin-top: 6px;
+  }
 }
